--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<hr noshade > 
 			↑↓ Divisão de linhas com  hr  ente tags ↑↓
 			<hr noshade>
-			<img src="C:\Users\theol\Desktop\Thalles SENAI\GitHub\IMG-20230702-WA0013.jpg""
+			<img src="C:\Users\theol\Desktop\Thalles SENAI\GitHub\IMG-20230702-WA0013.jpg"
 			width="50%"border="10 px solid"<p>
 		  <hr>	
 	<style>
