--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		  <hr>	
 	<style>
 		marquee {
-		font-size: 30px;
+		font-size:50px;
 		truespeed: 150;
-		color: yellow;
+		color: red;
 		font-family: comic sans ms;
 		}
 	</style>
